Fix scrollbar position

--- a/webapp/client/stylesheets/_queue.scss
+++ b/webapp/client/stylesheets/_queue.scss
@@ -59,7 +59,7 @@
           transition: all 0.1s ease-in-out;
   overflow-x: none;
   overflow-y: scroll;
-  width: 180px;
+  width: 195px;
   border: 0;
   margin-bottom: 0px;
 
